--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Zip frontend files
-        run: zip -r build.zip ./*
+        run: zip -r build.zip index.html css js img modules data
 
       - name: Copy build to server
         uses: appleboy/scp-action@v0.1.4
@@ -33,3 +33,4 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             bash ~/deploy/deploy_frontend.sh
+            
