--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,11 @@ jobs:
       - name: Zip frontend files
         run: zip -r build.zip index.html css js img modules data
 
-      - name: Copy build to server
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: the-archive-app.com
-          username: ubuntu
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "build.zip"
-          target: "/tmp"
-          strip_components: 0
-          rm: false
+      - name: Copy build to server (real scp)
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > private_key
+          chmod 600 private_key
+          scp -i private_key -o StrictHostKeyChecking=no build.zip ubuntu@the-archive-app.com:/tmp/build.zip
 
       - name: Run deploy script on server
         uses: appleboy/ssh-action@v0.1.10
